navbar "jumping" fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -2589,8 +2589,8 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 200, 0, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 200, 0, 0.25); */
-}
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 200, 0, 0.25); 
+}*/
 .form-range::-moz-focus-outer {
   border: 0;
 }
@@ -3026,8 +3026,8 @@ textarea.form-control-lg {
 }
 /* .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 200, 0, 0.25); */
-}
+  box-shadow: 0 0 0 0.25rem rgba(255, 200, 0, 0.25); 
+}*/
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
   opacity: 0.65;
@@ -11397,8 +11397,10 @@ p {
   color: #66FCF1;
   letter-spacing: 0.0625em;
   text-transform: uppercase;
+  border-bottom: 2px solid transparent;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
+  box-sizing:border-box;
   color: #45A29E;
   border-bottom: 2px solid #45A29E;
 }
